# freecaduserseed

./: .gitignore  README.md  generate_phpbb_seed.py  generate_seed_common.py  generate_wiki_seed.py  get_phpbb_users.py  get_wiki_users.py  pyproject.toml
phpbb/: compose.yaml  seedimport.php  seedimport.sh
